--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     </article>
 
 
+    <script src="scripts/entryComponent.js"></script>
+    <script src="scripts/entriesDOM.js"></script>
+    <script src="scripts/data.js"></script>
     <script src="scripts/journal.js"></script>
 </body>
 </html>
