Fully modularized. Using `import` and `export default`

--- a/public/index.html
+++ b/public/index.html
@@ -49,10 +49,6 @@
     </article>
 
 
-    <script src="scripts/entryComponent.js"></script>
-    <script src="scripts/filterEntries.js"></script>
-    <script src="scripts/entriesDOM.js"></script>
-    <script src="scripts/data.js"></script>
-    <script src="scripts/journal.js"></script>
+    <script src="dailyjournal.js"></script>
 </body>
 </html>
