Close to final version

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
             <textarea type="date" name="journalEntry" id="journalEntry"></textarea>
         </fieldset>
         <fieldset class="fieldset">
-            <label for="journalDate">Mood for the day</label>
+            <label for="journalDate">My mood for the day</label>
             <select name="mood" id="mood">
                 <option value="sad">Sad</option>
                 <option value="ok">Ok</option>
