Edit working with a single form

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main class="container"></main>
-    <button id="journalSaveButton">Record Journal Entry</button>
+    <button id="journalSaveButton">Save</button>
 
     <hr/>
 
