--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <main class="container"></main>
+    <button id="journalSaveButton">Record Journal Entry</button>
 
     <hr/>
 
