FIltering working, pre-dynamic moods

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,7 @@
 </head>
 
 <body>
-    <main class="container">
-    </main>
+    <main class="container"></main>
 
     <script src="./scripts/main.js" type="module"></script>
 </body>
